tests/NormalTests/paczka1/small_fuzzy/90694526.err
Error in line 5: wUmC6aIwcM S187 26,34
Error in line 2: XYwIUas S906 96,2
Error in line 6: wUmC6aIwcM S187 1251,4
Error in line 8: Kf08R2Ep7 S906 49,4
